chore: remove irrelevant keyword

--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -9,8 +9,7 @@
   },
   "keywords": [
     "eslint",
-    "eslint config",
-    "eslint typescript"
+    "eslint config"
   ],
   "author": "Lester Lau",
   "license": "MIT",
